[project]
name = "boa_test_constructor"
description = """This project provides a unittest class for testing NEO3 Blockchain smart contracts
       in style similar to unittest.IsolatedAsyncioTestCase.
       It includes all necessary dependencies like a staic binary of a neo-go node to run tests against.
       """
readme = "README.rst"
requires-python = ">=3.13,< 3.15"
license = {file = "LICENSE.rst"}
keywords = ["NEO3", "Blockchain", "unit test"]
authors = [
   {name = "Erik van den Brink", email = "erik@coz.io"},
   {name = "Lucas Kenji Uezo"},
   {name = "meevee98"},
]
dynamic = ["version"]
dependencies = [
   "neo-mamba==3.3.0",
   "PyYAML",
   "typing-extensions"
]

[project.optional-dependencies]
dev = [
   "black==25.12.0",
   "build==0.10.0",
   "bump-my-version==0.10.0",
   "mypy==1.16.0",
   "requests",
   "tomlkit==0.12.1",
   "types-PyYAML",
]

[project.urls]
Repository = "https://github.com/CityOfZion/boa-test-constructor"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py313']

[tool.neogo]
tag = "v0.116.0"

[tool.mypy]
check_untyped_defs = true
disable_error_code = "func-returns-value"

[tool.bumpversion]
current_version = "0.7.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "./boaconstructor/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[tool.setuptools.dynamic]
version = { attr = "boaconstructor.__version__" }